@startuml

entity Customer {
    *customer_id: INT
    --
    name: VARCHAR(30)
    email: VARCHAR(30)
    password: VARCHAR(50)
    in_game: VARCHAR(30)
}

entity Champion {
    *champion_id: INT
    --
    name: VARCHAR(30)
    thumbnail_url: VARCHAR(255)
}

entity Skin {
    +skin_id: INT
    +champion_id: INT
    --
    name: VARCHAR(30)
    thumbnail_url: VARCHAR(255)
    video_url: VARCHAR(255)
    price: DECIMAL(10,2)
}

entity Order {
    *customer_id: INT
    *order_id: INT
    --
    order_date: Date
    total_price: DECIMAL(10,2)
    is_paid: Boolean
}

entity OrderDetail {
    *order_id: INT
    *skin_id: INT
}

Customer ||--o{ Order : places

Champion ||--o{ Skin : have

Order ||--|{ OrderDetail : contains

OrderDetail }|--|| Skin : includes


@enduml
